# bmr-model-merge

./: CONTRIBUTING.md  README.md  WORKFLOW_GUIDE.md  compare_results.py  cv2_mock.py  demo.py  evaluate.py  publish_to_hf.py  pyproject.toml  run.py  run_and_checkpoint.py  run_complete_workflow.py  run_evolution.py  run_h200_full.sh  run_optimization.py  setup.py  setup_resources.py
assets/: architecture.md
configs/: demo_config.yaml
configs/evolution/: bmr_bwr_config.yaml  default.yaml  h200_full.yaml
configs/llm/: elyza-japanese-ocr-7b.yaml  japanese-stablelm-7b.yaml  llm-jp-invoice-13b.yaml  rinna-document-4b.yaml  shisa-gamma-7b-v1.yaml
configs/vlm/: deepseek-vl2-small.yaml  got-ocr2-0.yaml  internvl2-5-8b.yaml  qwen2-5-vl-7b.yaml  stockmark-2-vl-100b-beta.yaml  vila-jp.yaml
data/: sample_config.yaml
docs/: ALGORITHM_GUIDE.md  JAPANESE_OCR_GUIDE.md
evomerge/: __init__.py  utils.py
evomerge/data/: __init__.py  datasets.py  processor.py  vista_dataset.py
evomerge/eval/: __init__.py  ja_field_detection.py  ja_invoice_vqa.py  ja_receipt_extraction.py  metrics.py  utils.py
evomerge/evolution/: __init__.py  bmr.py  bwr.py  crossover.py  fitness.py  genetic.py  mutation.py  population.py
evomerge/models/: __init__.py  base_ocr.py  field_extractor.py  japanese_ocr.py
evomerge/processors/: __init__.py  image_processor.py
results/checkpoints/: genetic_best.npy
results/logs/: bmr_history.json  bwr_history.json  genetic_history.json
results/results/: algorithm_comparison.json  workflow_report.json  workflow_report.md
(+2 files in other folders)
