[tool.poetry]
name = "bmr-model-merge"
version = "0.1.0"
description = "Japanese invoice/receipt OCR using evolutionary model merging"
authors = ["BMR Team"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.38.2"
torch = "^2.0.0"
vllm = "^0.3.0"
mergekit = "^0.1.0"
lm-eval = "^0.3.0"
optuna = "^3.3.0"
ray = "^2.7.0"
opencv-python = "^4.8.0"
pillow = "^10.2.0"
fasttext = "^0.9.2"
rouge_score = "^0.1.2"
fugashi = "^1.3.1"
emoji = "^2.10.1"
neologdn = "^0.5.2"
datasets = "^2.18.0"
gradio = "^4.21.0"
accelerate = "^0.27.2"
unidic-lite = "^1.0.8"
einops = "^0.7.0"
sentencepiece = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"